--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for installing tomcat
 
-- hosts: tomcat
+- hosts: all
   become: true
 
   tasks:
@@ -19,7 +19,8 @@
 
     - name: Rename tomcat file
       command: mv /usr/local/apache-tomcat-9.0.24 /usr/local/tomcat9
-      creates: /usr/local/tomcat9
+      args:
+        creates: /usr/local/tomcat9
 
     - name: Start Tomcat
       command: nohup sh /usr/local/tomcat9/bin/startup.sh &
